--- a/metadata.yml
+++ b/metadata.yml
@@ -1,7 +1,7 @@
 name: Vigilo Confido
-version: 0.8.1
+version: 0.8.2
 author: memmaker
-description: "An vanilla X-COM expansion with a class & skill system at its core."
+description: "Skill & Class System with the EU2012 Storyline."
 master: xcom1
 id: "vigilo-confido"
-requiredExtendedVersion: "6.3"
+requiredExtendedVersion: "6.4"
