--- a/metadata.yml
+++ b/metadata.yml
@@ -1,6 +1,6 @@
 name: Vigilo Confido
-version: 0.9.8.3
-author: memmaker
+version: 0.9.9
+author: memmaker & efrenespartano
 description: "Skill & Class System with the EU2012 Storyline."
 master: xcom1
 id: "vigilo-confido"
